--- a/Manipulacao_de_Dados_Ex_03.ipynb
+++ b/Manipulacao_de_Dados_Ex_03.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -206,7 +206,7 @@
        "[943 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -914,278 +914,57 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>occupation</th>\n",
-       "      <th>gender</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">administrator</th>\n",
-       "      <th>F</th>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">artist</th>\n",
-       "      <th>F</th>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>doctor</th>\n",
-       "      <th>M</th>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">educator</th>\n",
-       "      <th>F</th>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">engineer</th>\n",
-       "      <th>F</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">entertainment</th>\n",
-       "      <th>F</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">executive</th>\n",
-       "      <th>F</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">healthcare</th>\n",
-       "      <th>F</th>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">homemaker</th>\n",
-       "      <th>F</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">lawyer</th>\n",
-       "      <th>F</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">librarian</th>\n",
-       "      <th>F</th>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">marketing</th>\n",
-       "      <th>F</th>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">none</th>\n",
-       "      <th>F</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">other</th>\n",
-       "      <th>F</th>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">programmer</th>\n",
-       "      <th>F</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">retired</th>\n",
-       "      <th>F</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">salesman</th>\n",
-       "      <th>F</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">scientist</th>\n",
-       "      <th>F</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">student</th>\n",
-       "      <th>F</th>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">technician</th>\n",
-       "      <th>F</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">writer</th>\n",
-       "      <th>F</th>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      age\n",
-       "occupation    gender     \n",
-       "administrator F        36\n",
-       "              M        43\n",
-       "artist        F        13\n",
-       "              M        15\n",
-       "doctor        M         7\n",
-       "educator      F        26\n",
-       "              M        69\n",
-       "engineer      F         2\n",
-       "              M        65\n",
-       "entertainment F         2\n",
-       "              M        16\n",
-       "executive     F         3\n",
-       "              M        29\n",
-       "healthcare    F        11\n",
-       "              M         5\n",
-       "homemaker     F         6\n",
-       "              M         1\n",
-       "lawyer        F         2\n",
-       "              M        10\n",
-       "librarian     F        29\n",
-       "              M        22\n",
-       "marketing     F        10\n",
-       "              M        16\n",
-       "none          F         4\n",
-       "              M         5\n",
-       "other         F        36\n",
-       "              M        69\n",
-       "programmer    F         6\n",
-       "              M        60\n",
-       "retired       F         1\n",
-       "              M        13\n",
-       "salesman      F         3\n",
-       "              M         9\n",
-       "scientist     F         3\n",
-       "              M        28\n",
-       "student       F        60\n",
-       "              M       136\n",
-       "technician    F         1\n",
-       "              M        26\n",
-       "writer        F        19\n",
-       "              M        26"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "occupation     gender\n",
+      "administrator  F          45.569620\n",
+      "               M          54.430380\n",
+      "artist         F          46.428571\n",
+      "               M          53.571429\n",
+      "doctor         M         100.000000\n",
+      "educator       F          27.368421\n",
+      "               M          72.631579\n",
+      "engineer       F           2.985075\n",
+      "               M          97.014925\n",
+      "entertainment  F          11.111111\n",
+      "               M          88.888889\n",
+      "executive      F           9.375000\n",
+      "               M          90.625000\n",
+      "healthcare     F          68.750000\n",
+      "               M          31.250000\n",
+      "homemaker      F          85.714286\n",
+      "               M          14.285714\n",
+      "lawyer         F          16.666667\n",
+      "               M          83.333333\n",
+      "librarian      F          56.862745\n",
+      "               M          43.137255\n",
+      "marketing      F          38.461538\n",
+      "               M          61.538462\n",
+      "none           F          44.444444\n",
+      "               M          55.555556\n",
+      "other          F          34.285714\n",
+      "               M          65.714286\n",
+      "programmer     F           9.090909\n",
+      "               M          90.909091\n",
+      "retired        F           7.142857\n",
+      "               M          92.857143\n",
+      "salesman       F          25.000000\n",
+      "               M          75.000000\n",
+      "scientist      F           9.677419\n",
+      "               M          90.322581\n",
+      "student        F          30.612245\n",
+      "               M          69.387755\n",
+      "technician     F           3.703704\n",
+      "               M          96.296296\n",
+      "writer         F          42.222222\n",
+      "               M          57.777778\n",
+      "Name: user_id, dtype: float64\n"
+     ]
     }
    ],
    "source": [
-    "users.groupby(['occupation', 'gender']).count()[['age']]"
+    "print(100*(users.groupby([\"occupation\",\"gender\"])[\"user_id\"].count())/(users.groupby([\"occupation\"])[\"user_id\"].count()))\n"
    ]
   },
   {
@@ -1197,13 +976,6 @@
    "source": [
     "**Parabéns! Você chegou ao fim!**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
